--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a systems assurance specialist</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Philadelphia Suburbs</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Love the Arts...music, dance, etc.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>I'm not sure yet, i like so many things</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Philadelphia Suburbs</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Sort of fell into this and thought it was interesting</p>
     </section>
 
     <footer id="footer">
